agregando Makefile - fix tests.sh